--- a/css/style.css
+++ b/css/style.css
@@ -126,9 +126,10 @@ scale: 0.95;
 }
 main{
 height: 820px;
-background: rgb(208,209,255);
-background: linear-gradient(90deg, rgba(208,209,255,1) 0%, rgba(208,209,255,1) 46%, rgba(200,231,255,1) 100%);
+background-image: url(https://static.vecteezy.com/system/resources/previews/017/033/096/non_2x/abstract-ppt-background-design-is-simple-and-suitable-for-ppt-backgrounds-and-others-free-vector.jpg);
 width: 100%;
+background-size: cover;
+background-position: center;
 }
 .tituloprc{
     font-family: 'Comfortaa', sans-serif;   
@@ -142,22 +143,22 @@ width: 100%;
     padding-top: 20px;
 }
 .fotos{
-    display: flex;
-    align-items: center;
-    height: 35rem;
+    display: flex;  
     justify-content: space-between;
     margin-top: auto;
     flex-wrap: wrap;
-    background-image: url(https://images.unsplash.com/photo-1474540412665-1cdae210ae6b?q=80&w=1783&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-image: url(../image/backround\ main.jpg);
+    opacity: 0.8;
     background-size: cover;
     background-position: center;
-    border-radius: 1vh;
+    border-radius: 3vh;
     border-style: inset;
 }
 #agua_dulce1{
     border-style: solid;
     border-radius: 4vh;
     width: 500px;
+    flex-wrap: wrap;
 }
 .agua_dulce{
     width: 500px;
@@ -171,11 +172,12 @@ width: 100%;
     border-style: solid;
     border-radius: 4vh;
     width: 500px;
+    flex-wrap: wrap;
 }
 .marinos{
+    width: 500px;
     display: flex;
     align-items: center;
-    gap: 10px;    
 }
 
 .fotos h1{
@@ -187,7 +189,6 @@ width: 100%;
     font-family: OpenSans;
     margin-right: 50px;
     font-size: 13px;
-    background-color: transparent;
     color: #22577a;
  }
 
