--- a/Preentrega2-main/css/style.css
+++ b/Preentrega2-main/css/style.css
@@ -20,7 +20,7 @@ li{
     padding-right: 2px;
     
 }
-.navbar a{
+a{
     text-decoration: none;
     color: #c7f9cc;
     font-size: 1rem;
@@ -130,9 +130,6 @@ main{
     background-size: cover;   
     background-position: center;
     background-attachment: fixed;
-    display: flex;
-    flex-wrap: wrap;
-    
 }
 .titulo {
    display: flex;
@@ -224,35 +221,6 @@ main{
     grid-area: foto2;
     width: 500px;
 }
-/*Galeria de fotos*/
-
-.galeria{
-    margin-bottom: 2rem;
-}
-.galeria h1{   
-    text-align: center;
-    font-family: footer;
-    font-size: 5rem;
-    color: steelblue;
-}
-
-.imagenes{
-    display: flex;
-    height: 430px;
- 
-}
-.galeria img{
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    transition: 2s ease;
-}
-.galeria img:hover{
-    cursor: crosshair;
-    width: 300px;
-    opacity: 1;
-    filter: contrast(120%);
-}
 /*Dropdown Menu*/
 
 .dropdown_menu{
@@ -288,117 +256,30 @@ main{
     display:flex;
     justify-content: center;
 }
-/*Footer*/
-@font-face {
-    font-family: footer;
-    src: url(../fonts/CaviarDreams.ttf);
-}
-footer{
-    background-image: url(../image/background\ footer.jpg);
-    background-size: cover;
-    background-position: center;
-    padding-top: 0.5rem;
-    border-top-style: double;
-}
-.pie{
-    display: flex;
-    height: 125px;
-}
-.contacto{
-   border-right-style: double;
-}
-.contacto h2{
-    text-align: center;
-    font-family: footer;
-}
-
-.telefono{
-    display: flex;
-
-}
-.telefono img{
-    width: 30px;
-}
-.telefono p{
-    font-family: parrafo;
-}
-.mail{
-    display: flex;
-}
-.mail img{
-    width: 30px;
-}
-.mail p{
-    font-family: parrafo;
-}
-.redes{
-    border-right-style: double;
-}
-.redes h2{
-    font-family: footer;
-    text-align: center;
-}
-.facebook{
-    display: flex;
-    align-items: center;
-}
-.facebook img{
-    width: 30px;
-}
-.facebook p a {
-    font-family: 'Comfortaa', sans-serif; 
-    text-decoration: none;
-    align-self: center;
-    color: #14080E;
-    margin-left: 20px;
-}
-.facebook p:hover{
-    scale: 1.03;  
-}
-.instagram{
-    display: flex;
-    align-items: center;
-}
-.instagram img{
-    width: 30px;
-    
-}
-.instagram p a{
-    font-family: 'Comfortaa', sans-serif; 
-    text-decoration: none;
-    color: #14080E;
-    text-align: center;
-    margin-left: 20px;
-}
-.instagram p:hover{
-    scale: 1.03;
-}
-.ubicacion{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.titulo_ubicacion{
+/*Galeria de fotos*/
+.main_galeria{
     display: flex;
     justify-content: center;
 }
-.titulo_ubicacion img{
-    width: 40px;
-}
-.titulo_ubicacion h2{
-    text-align: center;
-    font-family: footer;
-}
-.padre_mapa{
+.galeria{
     display: flex;
-    justify-content: center;
-    margin-bottom: 7px;
+    width: 600px;
+    height: 430px;
+ 
 }
-.mapa{
-    height: 115px;
-    
+.galeria img{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: 5s ease;
 }
-
+.galeria img:hover{
+    cursor: crosshair;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
+}
 /*resposive designs*/
 @media (max-width: 992px){
 
@@ -413,38 +294,5 @@ footer{
     .dropdown_menu{
         display: block;
     }
-    .titulo img{
-        width: 75px;
-    }
-    .titulo h1{
-        font-size: 2rem;
-    }
-    .presentacion img{
-        width: 200px;
-    }
-    .presentacion h2{
-        font-size: 16px;
-    }
-    .presentacion p{
-        font-size: 10px;
-    }
-    .agua_dulce img{
-        width: 200px;
-    }
-    .agua_dulce h2{
-        font-size: 16px;
-    }
-    .agua_dulce p{
-        font-size: 10px;
-    }
-    .marinos img{
-        width: 200px;
-    }
-    .marinos h2{
-        font-size: 16px;
-    }
-    .marinos p{
-        font-size: 10px;
-    }
-}
 
+}
